[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Plyto"
version = "0.0.0"
authors = [
  { name="Philipp Kroll", email="" },
]
description = "Low Latency Event Driven Programming."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Philipp-Co/pluto"
Issues = "https://github.com/Philipp-Co/pluto/issues"
